# apalis-sqlite

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: bench.yml  changelog.yml  ci.yml  coverage.yml  docs.yml  issues.yml  pr-preview.yml  release.yml  rust-security.yml  security.yml  stale.yml
.sqlx/: query-0819e39ed31495e0c70a6dd549b10e5c52e64d5289ca829e2a0135a14801b930.json  query-0be6db0bdde33835113a74e4749bc68adca35acef6ce80e58bad3b70c3fd6d97.json  query-0c51f68a6dc3a43da8d955530e02acf90e2a3710690f398f9ffaa71e180f1d9e.json  query-1356c17313c5f3491e384d1667106a42fe6918792ae9bea8848a6ec1a3895a76.json  query-19af6c8445ee82d9c4a54100b2b2dffad5e4a7992174c82a3ef1937e4d97cc71.json  query-1beef6dd1673e83142d565dcd7a0543bde1cbc72f692187d8a7fef06e952f513.json  query-1cd760004a2341bbded38a4fa431eaa74232f6f6f3121c7086a0b138195e9b0d.json  query-40a420986a37c9db2fc35b161092d6063f186242ca1808cfae9d6477c7d8687b.json  query-41198057d67f5386d366f332c349af4519adf779487e4d2e8b7137b79db1b5e7.json  query-41ce7e67750c304b39bb88def9c4dd6e8a3e7ea31ef8d622534a9fa0093c31e2.json  query-42042a81a76b1f366a6f421acc329a245d0bb2b84595f87a883c60d6f120cf63.json  query-4ead10dafe0d2d024654403f289c4db57308e5cf88f44efaf23b05c585626465.json  query-61843a18bffdee192cd01f1537f0f03d75403970fc8347d0f017f04d746b2b98.json  query-75c53a93669a7ac2141b1bb62af8edce306564754651c4098f8dfe693195f6ca.json  query-7bd7de027caa72c93f7f89bd24a5a78685df4c262c2a13eafd9803c3672dcd10.json  query-8e68049c1005dd0981469dac442cc479d318a98f4891ed46ff8588bb4e85615b.json  query-90406ca41cb79e68f66a300730f85ad7b0a3ddc713341adcbbc959021082c8e9.json  query-a43052e877930a522d6a63789935653f4fe06d10361c555f8ade4b65589520bc.json  query-ae9b77d1f5b3f5125a37cdc29f6489b5f84003af0154b50166aaa6472863cd2d.json  query-b3e8f3efeeb73cc19602247f4d61c94a3743d2a7608360446ecd82df3264f4ce.json  query-b44b1058179869ec68916630635a9f1318e707f1ee1acd8662952d0e0e67200b.json  query-cfc8346ce97a0f65e057b439787acaa0ee3ad0de2ad6453554e95be9df4e487e.json  query-d2a2123b8ede2014f106836cf41b7ec3470a737fa5174e7a2aa16dcf16fc5576.json  query-d7aefe54cd7388c208fff5b946390f217b575f0ca464a5faddd0fe2d51793983.json  query-eed1a436f9bad0f9ee6c46b47580fa7bdc9acef7704fe86466d28fc85126b8e3.json  query-f4e22035b9e6b6c274b326c7a25b72909f4e44f49d068fb64c0b40a0b017f22e.json
examples/: basic.rs  codec.rs  dag.rs  realtime.rs  shared.rs  workflow.rs
migrations/: 20251013233016_stats_indexes.sql  20251018164941_move_to_bytes.sql
migrations/bytes/: 20251017141210_initial_bytes_storage.sql  20251017162501_worker_started_at.sql
migrations/json/: 20251017150712_rename_last_error.sql  20251018162501_metadata.sql
queries/backend/: fetch_completed_tasks.sql  fetch_next.sql  fetch_next_shared.sql  keep_alive.sql  list_all_jobs.sql  list_all_workers.sql  list_jobs.sql  list_queues.sql  list_workers.sql  overview.sql  overview_by_queue.sql  queue_length.sql  reenqueue_orphaned.sql  register_worker.sql  stats.sql  vacuum.sql
queries/task/: ack.sql  fetch_next.sql  find_by_id.sql  kill.sql  lock.sql  reschedule.sql  retry.sql  sink.sql  update_by_id.sql
queries/worker/: register.sql
src/: ack.rs  callback.rs  config.rs  context.rs  fetcher.rs  from_row.rs  hook.rs  lib.rs  reenqueue_orphaned.rs  shared.rs  sink.rs  timestamp.rs
src/queries/: ack_task.rs  fetch_by_id.rs  keep_alive.rs  list_queues.rs  list_tasks.rs  list_workers.rs  lock_task.rs  metrics.rs  mod.rs  reenqueue_orphaned.rs  register_worker.rs  vacuum.rs  wait_for.rs
src/traits/: list_workers.rs  mod.rs
supply-chain/: config.toml
