[package]
name = "apalis-sqlite"
version = "1.0.0-rc.4"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
readme = "README.md"
edition = "2024"
repository = "https://github.com/apalis-dev/apalis-sqlite"
license = "MIT"
description = "Background task processing for rust using apalis and sqlite"
keywords = ["apalis", "background-jobs", "task-queue", "sqlite", "async"]
categories = ["asynchronous", "database"]

[features]
default = ["tokio-comp", "migrate", "json", "chrono"]
migrate = ["sqlx/migrate", "sqlx/macros"]
async-std-comp = ["async-std", "sqlx/runtime-async-std-rustls"]
async-std-comp-native-tls = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-comp = ["tokio", "sqlx/runtime-tokio-rustls"]
tokio-comp-native-tls = ["tokio", "sqlx/runtime-tokio-native-tls"]
json = ["apalis-codec/json", "sqlx/json"]
chrono = ["apalis-sql/chrono", "sqlx/chrono"]
time = ["apalis-sql/time", "sqlx/time"]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["sqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
apalis-codec = { version = "0.1.0-rc.4", default-features = false }
apalis-core = { version = "1.0.0-rc.4", features = ["sleep"] }
apalis-sql = { version = "1.0.0-rc.4", default-features = false }
log = "0.4.21"
futures = "0.3.30"
tokio = { version = "1", features = ["rt", "net"], optional = true }
async-std = { version = "1.13.0", optional = true }
thiserror = "2.0.0"
pin-project = "1.1.10"
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
apalis = { version = "1.0.0-rc.4" }
apalis-workflow = { version = "0.1.0-rc.4" }
apalis-codec = { version = "0.1.0-rc.4", features = ["msgpack"]}
futures-util = "0.3.31"
chrono = "0.4"

[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
type_complexity = "allow"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
